Fix whitespace

--- a/src/_sass/layout/_footer.scss
+++ b/src/_sass/layout/_footer.scss
@@ -16,6 +16,10 @@
   border-block-start: medium solid var(--border);
 }
 
+#secondary h2 {
+  margin-block-start: unset;
+}
+
 #contentinfo {
   background-color: var(--overlay);
   border-block-start: thin dotted var(--border);
